styling done and collection of words added

--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@ git push
         <div id="info"><p>these are the rools and Im only making
           this because blablablathese are the rools and Im only making this because blablablathese are the rools and Im only making this because blablabla. press anywhere to begin</p></div>
       </div>
-      <div class="div1"></div>
     </header>
     <main>
+      <div class="div1">
+        <div id="print-box">
+          <p>Farbror Barbro says:</p>
+          <br>
+          <p id="correct-words"></p>
+        </div>
+      </div>
       <div class="div2"></div>
     </main>
+
+    <script src="assets/js/script.js"></script>
 
   </body>
 </html>
