--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <!-- 
 git add .
-git commit -m "lots of code"
+git commit -m "complete"
 git push
 -->
   <head>
@@ -18,8 +18,13 @@ git push
       <div class="div0">
         <h1>welcome to my stupid memory game</h1>
         <button id="info-btn">instrouctions</button>
-        <div id="info"><p>these are the rools and Im only making
-          this because blablablathese are the rools and Im only making this because blablablathese are the rools and Im only making this because blablabla. press anywhere to begin</p></div>
+        <div id="info"><p><strong>rools:</strong><br><br>
+        1. you only get one chance which is a feature and definately not product of poor programming.<br><br>
+        2. you win by not losing.<br><br>
+        3. you type the first word and get it right, then you type the first word followed by the second word and get that right, then you type the first word followed by the second word followed by the third...<br><br>
+        4. dont forget to always add a blank space after your word (before you submit)<br><br>
+        5. mm very good application
+      </p></div>
       </div>
     </header>
     <main>
@@ -30,7 +35,13 @@ git push
           <p id="correct-words"></p>
         </div>
       </div>
-      <div class="div2"></div>
+      <div class="div2">
+        <form action="" id="input-words">
+          <textarea name="text-area" id="text-area"></textarea>
+          <br>
+          <button type="submit" id="submit">proceed</button>
+        </form>
+      </div>
     </main>
 
     <script src="assets/js/script.js"></script>
