html validation fixes; complete

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ git commit -m "complete"
 git push
 -->
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB APPLICATION</title>
 
@@ -36,7 +36,7 @@ git push
         </div>
       </div>
       <div class="div2">
-        <form action="" id="input-words">
+        <form action="#" id="input-words">
           <textarea name="text-area" id="text-area"></textarea>
           <br>
           <button type="submit" id="submit">proceed</button>
