--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <!-- 
 git add .
-git commit -m "complete"
+git commit -m "readme-file added; complete"
 git push
 -->
   <head>
